--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
   <body>
 
 
+    <input type="file" id="fileInput"/>
+<script  type="module">
 
+import init, { add,print_gaspard,ouvrir_fichier } from './pkg/gaspard_emul.js';
+
+
+document.getElementById('fileInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    const arrayBuffer = e.target.result;
+                    const bytes = new Uint8Array(arrayBuffer);
+                    console.log(bytes);
+                };
+                reader.readAsArrayBuffer(file);
+                const arr = new Uint8Array(file);
+                ouvrir_fichier(arr);
+
+            }
+        });
+</script>
     <!-- Note the usage of `type=module` here as this is an ES6 module -->
     <script type="module">
-function dropHandler(ev) {
-  console.log("File(s) dropped");
-
-  // Prevent default behavior (Prevent file from being opened)
-  ev.preventDefault();
-
-  if (ev.dataTransfer.items) {
-    // Use DataTransferItemList interface to access the file(s)
-    [...ev.dataTransfer.items].forEach((item, i) => {
-      // If dropped items aren't files, reject them
-      if (item.kind === "file") {
-        const file = item.getAsFile();
-        console.log(`… file[${i}].name = ${file.name}`);
-      }
-    });
-  } else {
-    // Use DataTransfer interface to access the file(s)
-    [...ev.dataTransfer.files].forEach((file, i) => {
-      console.log(`… file[${i}].name = ${file.name}`);
-    });
-  }
-}
 
 
+  
 
 
       // Use ES module import syntax to import functionality from the module
@@ -42,6 +42,8 @@ function dropHandler(ev) {
       // don't support natively imported WebAssembly as an ES module, but
       // eventually the manual initialization won't be required!
       import init, { add,print_gaspard,ouvrir_fichier } from './pkg/gaspard_emul.js';
+
+
       async function run() {
         // First up we need to actually load the wasm file, so we use the
         // default export to inform it where the wasm file is located on the
@@ -71,24 +73,10 @@ function dropHandler(ev) {
         // modes
         await init();
 
-        // And afterwards we can use all the functionality defined in wasm.
-        const result = add(1, 2);
-
-
-        ouvrir_fichier('test1.o.elf');
-        gaspard_request("https://courchinoux.org")
-        console.log(`1 + 2 = ${result}`);
-        if (result !== 3)
-          throw new Error("wasm addition doesn't work!");
       }
 
       run();
     </script>
-    <div
-    id="drop_zone"
-    ondrop="dropHandler(event);"
- >
-    <p>Drag one or more files to this <i>drop zone</i>.</p>
-  </div>
+   
   </body>
 </html>
